@@ -1,3 +1,5 @@
+- Bug Fix: FENIX-15818 - Support student numbers with 6 digits
+
 2.12.2 (28-08-2024)
 - Refactor:  Support to  multiple active calendars [#UL-FC-5116]
 
